--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
         </div>
         <div id="addSection">
             <button type="button" id="addButton">+Add Book</button>
+            <dialog>
+                <h2>Add a new book</h2>
+                <form>
+                    <input type="text" class="formAuthor" placeholder="Author" title="Author">
+                </form>
+            </dialog>
         </div>
         <div id="content">
             <div class="card">
                 <div class="cardContent">
                     <p class="title">The Hobbit </p>
-                    <p class="author">Author: </p>
-                    <p class="pages">Pages: 290</p>
-                    <p class="read">Read: Already read</p>
+                    <p class="textContent">Author: </p>
+                    <p class="textContent">Pages: 290</p>
+                    <p class="textContent">Read: Already read</p>
                     <div class="buttonContainer">
                         <button type="button" class="readButton">Read</button>
                         <button type="button" class="deleteButton">Delete</button>
