--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <dialog data-add-dialog>
                 <h2>Add a new book</h2>
                 <form data-dialog-form>
-                    <input type="text" class="formTitle" placeholder="Book title" title="Title">
-                    <input type="text" class="formAuthor" placeholder="Author" title="Author">
-                    <input type="number" class="formPages" placeholder="Pages" title="Pages">
+                    <input type="text" class="formTitle" placeholder="Book title" title="Title" required>
+                    <input type="text" class="formAuthor" placeholder="Author" title="Author" required>
+                    <input type="number" class="formPages" placeholder="Pages" title="Pages" required>
                     <div class="checkboxContainer">
                         <input type="checkbox" name="read">
                         <p>Already read?</p>
